<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:text="@string/name_of_new_book" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/new_book_name"
            android:layout_height="wrap_content"
            android:id="@+id/new_book_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_create"
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/return_to_main"
        android:text="@string/return_to_main"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>